<?xml version="1.0"?>
<package format="3">
  <name>sbg_simu</name>
  <version>1.0.0</version>
  <description>
    ROS2 simulation driver package for usage with gazebo.
  </description>
  <author>SBG Systems</author>
  <maintainer email="support@sbg-systems.com">SBG Systems</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
